<resources>
    <string name="app_name">T2Y</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to Rent Trailer Fragment -->
    <string name="licensee_name">Licensee 1</string>
    <string name="trailer_name">2000 Kg Car Trailer</string>
    <string name="trailer_rating">5/5</string>
    <string name="trailer_description">A trailer is a container on wheels which is pulled by a car or other vehicle and which is used for transporting large or heavy items. A trailer is the long rear section of a lorry or truck, in which the goods are carried.</string>
    <string name="trailer_size_text_view">Size</string>
    <string name="trailer_insurance_text_view">Insurance</string>
    <string name="trailer_service_text_view">Serviced</string>
    <string name="trailer_age_text_view">Age</string>
    <string name="trailer_capacity_text_view">Capacity</string>
    <string name="trailer_tare_text_view">Tare</string>
    <string name="trailer_owned_by_text_view">Owned By</string>
    <string name="view_owner_button">View</string>
    <string name="trailer_cost">This Trailer Costs</string>
    <string name="rent_trailer_button">Rent Trailer</string>

    <!-- Strings related to Rent Trailer Fragment -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_rent_and_upsell_trailer">RentAndUpsellTrailer</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="rent_button">Rent</string>
    <string name="upsell_button">Upsell</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_dash">Find the best trailers, delivered to your door</string>
    <string name="api_key">AIzaSyDhK8wA8WVQbEqcVZyAVaxYM1kaoIp2jys</string>

    <string name="sharedPrefSearch">SearchKey</string>

    <string name="trailer2you">Trailer2You</string>
    <string name="traileratdisposal">Trailers at your disposal</string>
    <string name="capture_using_camera">Capture Using Camera</string>
    <string name="select_using_gallery">Select Using Gallery</string>
    <string name="title_activity_trailer_details">TrailerDetailsActivity</string>
    <string name="stripe_agreement">I authorise Stripe Samples to send instructions to the financial institution that issued my card to take payments from my card account in accordance with the terms of my agreement with you</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="give_feedback">Give Feedback</string>


</resources>